--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  hexcolor: ^2.0.3
+  # hexcolor: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +35,30 @@ dev_dependencies:
   flutter_bloc: ^7.0.0
   shared_preferences: ^2.0.6
   webview_flutter: ^2.0.8
+  responsive_sizer: ^3.1.1
+  scroll_page_view: ^1.0.2
+  carousel_slider: ^4.0.0
+  transparent_image: ^2.0.0
+  localize_and_translate: ^4.1.1
+  intl: ^0.17.0
+  timeago: ^3.3.0
+  sqflite: ^2.0.0
+  url_launcher: ^6.0.20
+  share: ^2.0.4
+  flutter_switch: ^0.3.2
+  package_info_plus: ^3.0.2
+  flutter_launcher_icons: ^0.10.0
+  animated_splash_screen: ^1.3.0
+
+flutter_icons:
+  android: true
+  image_path: "assets/image/logo.jpg"
+  
+  
+
+  
+
+
 
 
 
@@ -48,8 +72,26 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/image/Rectangle 15.png
+    - assets/image/facebook.png
+    - assets/image/gmail.png
+    - assets/image/nodata.png
+    - assets/image/linkedin.png
+    - assets/image/us_flag.png
+    - assets/image/eg_flag.png
+    - assets/image/bad_request_error.png
+    - assets/image/fetch_data_error.png
+    - assets/image/socket_error.png
+    - assets/image/unauthorised_error.png
+    - assets/image/logo.jpg
+    - assets/image/loading.png
+    - assets/lang/en.json
+    - assets/lang/ar.json
+    - assets/image/emty.png
+
+    
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,12 +102,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Ananda
+      fonts:
+        - asset: assets/font/font.ttf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
