--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,9 +43,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.oaics.customer"
+        applicationId "com.News.Report"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
@@ -56,11 +56,14 @@ android {
            keyPassword keystoreProperties['keyPassword']
            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
            storePassword keystoreProperties['storePassword']
+           
        }
    }
    buildTypes {
        release {
-           signingConfig signingConfigs.release
+        shrinkResources false
+        minifyEnabled false
+        signingConfig signingConfigs.release
        }
    }
 
