- Update article card UI - Remove arabic lange - Upload new release on store

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="News Report"
+        android:label="News Today Now"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
