--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,7 +32,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
     lintOptions { 
       checkReleaseBuilds false 
     }
@@ -43,11 +43,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.News.Report"
+        applicationId "com.News.Today.now"
         minSdkVersion 23
-        targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 34
+        versionCode 2
+        versionName "1.2.0"
     }
 
        signingConfigs {
@@ -61,8 +61,8 @@ android {
    }
    buildTypes {
        release {
-        shrinkResources false
-        minifyEnabled false
+        shrinkResources true
+        minifyEnabled true
         signingConfig signingConfigs.release
        }
    }
